--- a/component/header.html
+++ b/component/header.html
@@ -1,7 +1,6 @@
-<h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-  <li><a href="4.html">에라토스테네스의 체</a></li>
+<ol class="border">
+  <li><a href="HTML.html">HTML</a></li>
+  <li><a href="CSS.html">CSS</a></li>
+  <li><a href="Javascript.html">JavaScript</a></li>
+  <li><a href="Eratosthenes.html">에라토스테네스의 체</a></li>
 </ol>
