--- a/component/title.html
+++ b/component/title.html
@@ -1,1 +1,1 @@
-<h1><a href="index.html">WEB</a></h1>
+<h1 id="main"><a href="index.html">걸어서 수학속으로</a><img src="resources/walk.gif" width="10%" height="10%"></h1>
