--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,10 @@
-body{
+body {
   margin-left: 50px;
   margin-right: 50px;
 }
-#main{
-  background-color:  #ffc515;
-}
-
-.active{
-  color: red;
-}
-.border{
+header ol{
   border-right: solid orange 2px;
   width: 230px;
-}
-.grid{
-  display: grid;
-  grid-template-columns: 300px 1fr;
 }
 a {
   color: black;
@@ -27,37 +16,40 @@ h1 {
   border-bottom: 1px solid gray;
   margin: 0;
   padding: 20px;
+}
 
-}
-ul {
-  border-right: 1px solid gray;
-  width: 100px;
-  margin: 0;
-  padding: 20px;
-}
-#grid{
+.grid{
   display: grid;
-  grid-template-columns: 150px 1fr;
+  grid-template-columns: 300px 1fr;
 }
-#grid ul{
-  padding-left: 33px;
+.grid article{
+  padding: 10px 20px;
 }
-#grid #article{
-  padding-left: 25px;
-  padding-right: 20px;
+
+#main{
+  background-color:  #ffc515;
 }
+
 @media(max-width:800px) {
   body{
     margin: 0;
   }
-  #grid{
+  .grid{
     display: block;
-  }
-  ul {
-    border-right: none;
   }
   h1 {
     border-bottom: none;
     font-size: 38px;
+  }
+  
+  header{
+    border-right: 0px;
+    border-bottom: solid orange 2px;
+    padding-bottom: 10px;
+  }
+  header ol{
+    border-right: 0px;
+    /* border-bottom: solid orange 2px;
+    padding-bottom: 10px; */
   }
 }
